tests/baselines/reference/unusedImports1.errors.txt
tests/cases/compiler/file2.ts(1,1): error TS6133: 'Calculator' is declared but its value is never read.


==== tests/cases/compiler/file1.ts (0 errors) ====
    export class Calculator {
    
    }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    import {Calculator} from "./file1"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'Calculator' is declared but its value is never read.